test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_consts_and_vars/src/lib.sw
library;

pub const L_A = 5;

pub const L_X = 5;

pub const L_Y = 5;

pub const L_Z = 5;

pub const L_K = 5;

pub const L_M = 5;

pub const L_N = 5;
